# quick_test

./: deep_rag.py  prompt.py  pyproject.toml  requirements.txt
01_llm_api/: 01_llm_api.ipynb
02_elastic/: 01_retrieve.ipynb
03_langgraph/: 01_parallel_rag.ipynb  01_parallel_rag_adv.ipynb  02_deep_rag.ipynb  03_deep_rag_재정리.ipynb  04_local_deep_rag.ipynb  04_local_deep_web_research.ipynb  05_deep_web_research.ipynb  06_custom_reducer.ipynb
03_langgraph/.ipynb_checkpoints/: 02_deep_rag-checkpoint.ipynb  03_deep_rag_재정리-checkpoint.ipynb
04_docling/: output.md  test_granite.ipynb
